// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`launchTkenPair debug not win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=live debug &> tool.token.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchTkenPair debug not win32 2`] = `
Object {
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair debug win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=dev debug >> tool.token.log",
    Object {},
  ],
]
`;

exports[`launchTokenPair debug win32 2`] = `
Object {
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair fail not win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=live &> tool.token.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchTokenPair fail not win32 2`] = `
Object {
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair fail not win32 3`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "env": "live",
      "live": false,
    },
    "token",
  ],
]
`;

exports[`launchTokenPair fail win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=dev >> tool.token.log",
    Object {},
  ],
]
`;

exports[`launchTokenPair fail win32 2`] = `
Object {
  "token": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair fail win32 3`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "env": "dev",
      "live": false,
    },
    "token",
  ],
]
`;

exports[`launchTokenPair success not win32 1`] = `
Array [
  Array [
    "npm run tool token=token env=live &> tool.token.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchTokenPair success not win32 2`] = `
Object {
  "token": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair success not win32 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchTokenPair success win 32 1`] = `
Array [
  Array [
    "npm run tool token=token env=dev server >> tool.token.log",
    Object {},
  ],
]
`;

exports[`launchTokenPair success win 32 2`] = `
Object {
  "token": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "token": "token",
  },
}
`;

exports[`launchTokenPair success win 32 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchTokenPair success win 32 4`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "env": "dev",
      "live": false,
      "server": true,
    },
    "token",
  ],
]
`;

exports[`retry after long enought time 1`] = `
Object {
  "failCount": 1,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "token": "token",
}
`;

exports[`retry after long enought time 2`] = `
Array [
  Array [
    [Function],
    5000,
  ],
]
`;

exports[`retry after long enought time 3`] = `
Array [
  Array [
    "tool",
    "token",
    Object {
      "debug": false,
      "live": false,
      "server": false,
    },
  ],
]
`;

exports[`retry within short time 1`] = `
Object {
  "failCount": 3,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "token": "token",
}
`;

exports[`startLaunching 1`] = `
Array [
  Array [
    Object {
      "amount": 123,
      "debug": true,
      "env": "test",
      "maker": 123,
      "server": true,
      "spender": 123,
      "token": "test",
      "tokens": Array [
        "test",
        "test1",
      ],
    },
  ],
]
`;

exports[`startLaunching invalid token 1`] = `[Error: invalid token specified]`;

exports[`startLaunching no tokens 1`] = `
Array [
  Array [
    "test",
    "test",
    Object {
      "amount": 123,
      "debug": true,
      "env": "test",
      "maker": 123,
      "server": true,
      "spender": 123,
      "token": "",
      "tokens": Array [],
    },
  ],
]
`;

exports[`startLaunching tokens 1`] = `
Array [
  Array [
    "test",
    "test",
    Object {
      "amount": 123,
      "debug": true,
      "env": "test",
      "maker": 123,
      "server": true,
      "spender": 123,
      "token": "",
      "tokens": Array [
        "test",
        "test1",
      ],
    },
  ],
]
`;
